--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular-devkit/build-angular": "~19.0.0",
     "@angular-devkit/core": "~19.0.0",
     "@angular-devkit/schematics": "~19.0.0",
+    "@angular-eslint/eslint-plugin": "^18.4.3",
+    "@angular-eslint/eslint-plugin-template": "^18.4.3",
     "@angular/cli": "~19.0.0",
     "@angular/compiler-cli": "~19.0.0",
     "@angular/language-service": "~19.0.0",
@@ -42,14 +44,14 @@
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.13.0",
-    "angular-eslint": "^19.0.0",
-    "eslint": "^9.8.0",
+    "angular-eslint": "^18.3.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
     "nx": "20.2.1",
-    "prettier": "^2.6.2",
+    "prettier": "^3.3.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
