--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     "@angular/platform-browser": "~19.0.0",
     "@angular/platform-browser-dynamic": "~19.0.0",
     "@angular/router": "~19.0.0",
+    "@taiga-ui/cdk": "^4.17.0",
+    "@taiga-ui/core": "^4.17.0",
+    "@taiga-ui/event-plugins": "^4.0.2",
+    "@taiga-ui/icons": "^4.17.0",
+    "@taiga-ui/kit": "^4.17.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
@@ -26,6 +31,7 @@
     "@angular-devkit/schematics": "~19.0.0",
     "@angular-eslint/eslint-plugin": "^18.4.3",
     "@angular-eslint/eslint-plugin-template": "^18.4.3",
+    "@angular-eslint/template-parser": "^18.4.3",
     "@angular/cli": "~19.0.0",
     "@angular/compiler-cli": "~19.0.0",
     "@angular/language-service": "~19.0.0",
@@ -41,6 +47,7 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@taiga-ui/eslint-plugin-experience": "^0.235.1",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.13.0",
