--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~19.0.0",
-    "@angular-devkit/core": "~19.0.0",
-    "@angular-devkit/schematics": "~19.0.0",
-    "@angular-eslint/eslint-plugin": "^18.4.3",
-    "@angular-eslint/eslint-plugin-template": "^18.4.3",
-    "@angular-eslint/template-parser": "^18.4.3",
+    "@angular-devkit/core": "^19.0.0",
+    "@angular-devkit/schematics": "~18.2.0",
+    "@angular-eslint/eslint-plugin": "^18.3.0",
+    "@angular-eslint/eslint-plugin-template": "^18.3.0",
+    "@angular-eslint/template-parser": "^18.3.0",
     "@angular/cli": "~19.0.0",
     "@angular/compiler-cli": "~19.0.0",
     "@angular/language-service": "~19.0.0",
@@ -47,12 +47,13 @@
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@taiga-ui/eslint-plugin-experience": "^0.235.1",
+    "@taiga-ui/eslint-plugin-experience": "^0.234.0",
     "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.13.0",
     "angular-eslint": "^18.3.0",
     "eslint": "^8.57.1",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
