--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@aitesting/chat": ["libs/chat/src/index.ts"],
       "@aitesting/shared": ["libs/shared/src/index.ts"]
     }
   },
