--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@taiga-ui/event-plugins": "^4.0.2",
     "@taiga-ui/icons": "^4.17.0",
     "@taiga-ui/kit": "^4.17.0",
+    "@taiga-ui/legacy": "^4.18.0",
     "marked": "^15.0.3",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
