--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "nx serve",
-    "build": "nx build --base-href=/AITesting/",
+    "build": "nx build",
     "test": "nx test"
   },
   "private": true,
