--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@taiga-ui/icons": "^4.17.0",
     "@taiga-ui/kit": "^4.17.0",
     "@taiga-ui/legacy": "^4.18.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "marked": "^15.0.3",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
